<resources>
    <string name="app_name">Silicon Bee</string>
    <string name="label">SiBee</string>
    <string name="On">Включено</string>
    <string name="Off">Выключено</string>
    <string name="temp_begin">`t 0°`</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="co2_0_ppm">Содержание CO2 – 0 ppm</string>
    <string name="close">close door</string>
    <string name="open">open door</string>
    <string name="ground_flood">ground flood</string>
    <string name="first_flood">first flood</string>
    <string name="second_flood">second flood</string>
    <string name="button">Button</string>
    <string name="forced_ventilation_off">приточн. откл</string>
    <string name="forced_ventilation_on">приточн. вкл</string>
    <string name="exhaust_ventilation_off">вытяжн. откл</string>
    <string name="exhaust_ventilation_on">вытяжн. вкл</string>
    <string name="auto_off">авто выкл</string>
    <string name="auto_on">авто вкл</string>
</resources>