<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="cursive"
        android:text="@string/label"
        android:textColor="@color/red"
        android:textSize="23sp"
        android:textStyle="italic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:textColor="@color/purple_700"
        android:textSize="17sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/pair_id_list"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInfo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="gone"
        app:constraint_referenced_ids="toggle_button_1,toggle_button_2,toggle_button_3, toggle_button_4, textTemperature, textMQ_135" />

    <ToggleButton
        android:id="@+id/toggle_button_1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="200dp"
        android:minWidth="120dp"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pair_id_list" />

    <ToggleButton
        android:id="@+id/toggle_button_2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:minWidth="120dp"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_button_1" />

    <ToggleButton
        android:id="@+id/toggle_button_3"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:minWidth="120dp"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_button_2" />

    <ToggleButton
        android:id="@+id/toggle_button_4"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:minWidth="120dp"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_button_3" />

    <TextView
        android:id="@+id/textTemperature"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="190dp"
        android:text="@string/temp_begin"
        android:textColor="@color/purple_700"
        app:layout_constraintStart_toEndOf="@+id/toggle_button_1"
        app:layout_constraintTop_toTopOf="@+id/pair_id_list" />

    <TextView
        android:id="@+id/textMQ_135"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="270dp"
        android:text="@string/co2_0_ppm"
        android:textColor="@color/purple_700"
        app:layout_constraintStart_toEndOf="@+id/toggle_button_2"
        app:layout_constraintTop_toTopOf="@+id/pair_id_list" />

</androidx.constraintlayout.widget.ConstraintLayout>